--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,7 @@ body {
   line-height: 16px;
   letter-spacing: 0.02em;
   text-decoration: none;
+  color: var(--text-color);
 }
 .nav-item:hover {
   color: var(--accent-color);
