--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,8 @@ body {
   text-decoration: none;
   color: var(--text-color);
 }
-.nav-item:hover .nav-item:focus {
+.nav-item:hover,
+.nav-item:focus {
   color: var(--accent-color);
 }
 .main-title {
@@ -61,7 +62,8 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
-.main-button:hover .main-button:focus {
+.main-button:hover,
+.main-button:focus {
   background: var(--main-button-hover);
 }
 .contacts {
@@ -72,7 +74,8 @@ body {
   text-decoration: none;
   font-weight: 500;
 }
-.contacts:hover .contacts:focus {
+.contacts:hover,
+.contacts:focus {
   color: var(--accent-color);
 }
 .list-items {
@@ -130,7 +133,8 @@ address {
   color: var(--white-color);
   text-decoration: none;
 }
-.address:hover .address:focus {
+.address:hover,
+.address:focus {
   color: var(--accent-color);
 }
 .address-item {
@@ -140,7 +144,8 @@ address {
   color: rgba(255, 255, 255, 0.6);
   text-decoration: none;
 }
-.address-item:hover .address-item:focus {
+.address-item:hover,
+.address-item:focus {
   color: var(--accent-color);
 }
 footer {
@@ -158,7 +163,8 @@ footer {
   border: 0;
   cursor: pointer;
 }
-.button:hover .button:focus {
+.button:hover,
+.button:focus {
   background: var(--accent-color);
 }
 .image-name {
