--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,13 @@ body {
   background: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  cursor: pointer;
+  color: var(--white-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  text-align: center;
+  letter-spacing: 0.06em;
 }
 .main-button:hover,
 .main-button:focus {
@@ -162,10 +169,17 @@ footer {
   background: var(--section-color);
   border: 0;
   cursor: pointer;
+  padding: 6px 22px;
+  justify-content: space-between;
+  width: 128px;
+  height: 38px;
+  left: 576px;
+  top: 174px;
 }
 .button:hover,
 .button:focus {
   background: var(--accent-color);
+  color: var(--white-color);
 }
 .image-name {
   font-weight: 700;
